Fixed: absolute paths are required.

--- a/config/hiawatha.conf
+++ b/config/hiawatha.conf
@@ -1,15 +1,15 @@
 
-Pidfile        = tmp/hiawatha.pid
+Pidfile        = /deploy/apps/miniuni_http/tmp/hiawatha.pid
 ServerId       = www-data:www-data
 RandomHeader   = 250
 PreventCSRF    = yes
 PreventXSS     = yes
-AccessLogFile  = tmp/default.access.log
-ErrorLogFile   = tmp/default.error.log
-ExploitLogfile = tmp/exploit.log
-GarbageLogfile = tmp/garbage.log
-SystemLogfile  = tmp/system.log
-WorkDirectory  = tmp/working/
+AccessLogFile  = /deploy/apps/miniuni_http/tmp/default.access.log
+ErrorLogFile   = /deploy/apps/miniuni_http/tmp/default.error.log
+ExploitLogfile = /deploy/apps/miniuni_http/tmp/exploit.log
+GarbageLogfile = /deploy/apps/miniuni_http/tmp/garbage.log
+SystemLogfile  = /deploy/apps/miniuni_http/tmp/system.log
+WorkDirectory  = /deploy/apps/miniuni_http/tmp/working/
 ReverseProxy ^/.* http://127.0.0.1:330/
 
 Binding {
