--- a/config/hiawatha.conf
+++ b/config/hiawatha.conf
@@ -10,7 +10,6 @@ ExploitLogfile = /deploy/apps/miniuni_http/tmp/exploit.log
 GarbageLogfile = /deploy/apps/miniuni_http/tmp/garbage.log
 SystemLogfile  = /deploy/apps/miniuni_http/tmp/system.log
 WorkDirectory  = /deploy/apps/miniuni_http/tmp/working
-ReverseProxy ^/.* http://127.0.0.1:330/
 
 Binding {
   Port = 80
@@ -19,9 +18,13 @@ Binding {
 }
 
 
-Hostname = 127.0.0.1 www.miniuni.com
+Hostname = www.miniuni.com
 WebsiteRoot = /deploy/apps/miniuni/Public
 StartFile = index.html
+ReverseProxy ^/.* http://127.0.0.1:330/
 
+Hostname = www.surferhearts.com
+WebsiteRoot = /deploy/apps/surferhearts/Public
+StartFile = index.html
 
 
