Fixed: VirtualHost, not default site.

--- a/config/hiawatha.conf
+++ b/config/hiawatha.conf
@@ -23,8 +23,10 @@ WebsiteRoot = /deploy/apps/miniuni/Public
 StartFile = index.html
 ReverseProxy ^/.* http://127.0.0.1:330/
 
-Hostname = www.surferhearts.com
-WebsiteRoot = /deploy/apps/surferhearts/Public
-StartFile = index.html
+VirtualHost {
+  Hostname = www.surferhearts.com
+  WebsiteRoot = /deploy/apps/surferhearts/Public
+  StartFile = index.html
+}
 
 
