Added: www.megauni.com

--- a/config/hiawatha.conf
+++ b/config/hiawatha.conf
@@ -29,4 +29,11 @@ VirtualHost {
   StartFile = index.html
 }
 
+VirtualHost {
+  Hostname = www.megauni.com
+  WebsiteRoot = /deploy/apps/megauni/Public
+  StartFile = index.html
+  ReverseProxy ^/.* http://127.0.0.1:3350/
+}
+
 
