Fixed: default site for IP address should be blank.

--- a/config/hiawatha.conf
+++ b/config/hiawatha.conf
@@ -17,11 +17,16 @@ Binding {
   MaxRequestSize = 100
 }
 
-
-Hostname = www.miniuni.com
-WebsiteRoot = /deploy/apps/miniuni/Public
+Hostname = 103.105.49.222
+WebsiteRoot = /deploy/apps/miniuni_http/Public
 StartFile = index.html
-ReverseProxy ^/.* http://127.0.0.1:330/
+
+VirtualHost {
+  Hostname = www.miniuni.com
+  WebsiteRoot = /deploy/apps/miniuni/Public
+  StartFile = index.html
+  ReverseProxy ^/.* http://127.0.0.1:330/
+}
 
 VirtualHost {
   Hostname = www.surferhearts.com
