--- a/config/hiawatha.conf
+++ b/config/hiawatha.conf
@@ -10,6 +10,7 @@ ExploitLogfile = /deploy/apps/miniuni_http/tmp/exploit.log
 GarbageLogfile = /deploy/apps/miniuni_http/tmp/garbage.log
 SystemLogfile  = /deploy/apps/miniuni_http/tmp/system.log
 WorkDirectory  = /deploy/apps/miniuni_http/tmp/working
+CustomHeaderClient = Access-Control-Allow-Origin: SAMEORIGIN
 
 Binding {
   Port = 80
