Fixed: hide server string.

--- a/config/hiawatha.conf
+++ b/config/hiawatha.conf
@@ -10,7 +10,7 @@ ExploitLogfile = /deploy/apps/miniuni_http/tmp/exploit.log
 GarbageLogfile = /deploy/apps/miniuni_http/tmp/garbage.log
 SystemLogfile  = /deploy/apps/miniuni_http/tmp/system.log
 WorkDirectory  = /deploy/apps/miniuni_http/tmp/working
-CustomHeaderClient = Access-Control-Allow-Origin: SAMEORIGIN
+ServerString = vmHausHia
 
 Binding {
   Port = 80
@@ -21,6 +21,7 @@ Binding {
 Hostname = 103.105.49.222
 WebsiteRoot = /deploy/apps/miniuni_http/Public
 StartFile = index.html
+CustomHeaderClient = Access-Control-Allow-Origin: SAMEORIGIN;
 
 VirtualHost {
   Hostname = www.miniuni.com
