--- a/config/hiawatha.conf
+++ b/config/hiawatha.conf
@@ -35,6 +35,7 @@ VirtualHost {
   Hostname = www.surferhearts.com
   WebsiteRoot = /deploy/apps/surferhearts/Public
   StartFile = index.html
+  CustomHeaderClient = Access-Control-Allow-Origin: SAMEORIGIN;
 }
 
 VirtualHost {
