--- a/config/hiawatha.conf
+++ b/config/hiawatha.conf
@@ -28,6 +28,7 @@ VirtualHost {
   WebsiteRoot = /deploy/apps/miniuni/Public
   StartFile = index.html
   ReverseProxy ^/.* http://127.0.0.1:330/
+  RequestURI isfile Return
   CustomHeaderClient = Access-Control-Allow-Origin: SAMEORIGIN;
 }
 
@@ -43,6 +44,7 @@ VirtualHost {
   WebsiteRoot = /deploy/apps/megauni/Public
   StartFile = index.html
   ReverseProxy ^/.* http://127.0.0.1:3350/
+  CustomHeaderClient = Access-Control-Allow-Origin: SAMEORIGIN;
 }
 
 
