--- a/config/hiawatha.conf
+++ b/config/hiawatha.conf
@@ -28,7 +28,7 @@ VirtualHost {
   WebsiteRoot = /deploy/apps/miniuni/Public
   StartFile = index.html
   ReverseProxy ^/.* http://127.0.0.1:330/
-  RequestURI isfile Return
+  RequestURI isfile Call
   CustomHeaderClient = Access-Control-Allow-Origin: SAMEORIGIN;
 }
 
