--- a/config/hiawatha.conf
+++ b/config/hiawatha.conf
@@ -27,9 +27,7 @@ VirtualHost {
   Hostname = www.miniuni.com
   WebsiteRoot = /deploy/apps/miniuni/Public
   StartFile = index.html
-  ReverseProxy ^/.* http://127.0.0.1:330/
-  RequestURI isfile Call
-  CustomHeaderClient = Access-Control-Allow-Origin: SAMEORIGIN;
+  ReverseProxy ^/$ http://127.0.0.1:330/
 }
 
 VirtualHost {
@@ -44,7 +42,6 @@ VirtualHost {
   WebsiteRoot = /deploy/apps/megauni/Public
   StartFile = index.html
   ReverseProxy ^/.* http://127.0.0.1:3350/
-  CustomHeaderClient = Access-Control-Allow-Origin: SAMEORIGIN;
 }
 
 
