--- a/config/hiawatha.conf
+++ b/config/hiawatha.conf
@@ -27,7 +27,7 @@ VirtualHost {
   Hostname = www.miniuni.com
   WebsiteRoot = /deploy/apps/miniuni/Public
   StartFile = index.html
-  ReverseProxy ^/$ http://127.0.0.1:330/
+  ReverseProxy ^(/|.*\.json)$ http://127.0.0.1:330/
 }
 
 VirtualHost {
