--- a/config/hiawatha.conf
+++ b/config/hiawatha.conf
@@ -27,7 +27,8 @@ VirtualHost {
   Hostname = www.miniuni.com
   WebsiteRoot = /deploy/apps/miniuni/Public
   StartFile = index.html
-  ReverseProxy ^(/|.*\.json)$ http://127.0.0.1:330/
+  CustomHeaderClient = Access-Control-Allow-Origin: SAMEORIGIN;
+  ReverseProxy !(.css|.jpg|.jpeg|.txt|.ico|.js)$ http://127.0.0.1:330/
 }
 
 VirtualHost {
