Added: more secure headers

--- a/config/hiawatha.conf
+++ b/config/hiawatha.conf
@@ -27,15 +27,14 @@ VirtualHost {
   Hostname = www.miniuni.com
   WebsiteRoot = /deploy/apps/miniuni/Public
   StartFile = index.html
-  CustomHeaderClient = Access-Control-Allow-Origin: SAMEORIGIN;
-  ReverseProxy !(.css|.jpg|.jpeg|.txt|.ico|.js)$ http://127.0.0.1:330/
+  ReverseProxy /.* http://127.0.0.1:330/
 }
 
 VirtualHost {
   Hostname = www.surferhearts.com
   WebsiteRoot = /deploy/apps/surferhearts/Public
   StartFile = index.html
-  CustomHeaderClient = Access-Control-Allow-Origin: SAMEORIGIN;
+  CustomHeaderClient = Access-Control-Allow-Origin: SAMEORIGIN; content-security-policy: script-src 'self'; x-xss-protection: 1; mode=block; x-frame-options: SAMEORIGIN; x-content-type: nosniff
 }
 
 VirtualHost {
