--- a/config/hiawatha.conf
+++ b/config/hiawatha.conf
@@ -35,6 +35,10 @@ VirtualHost {
   WebsiteRoot = /deploy/apps/surferhearts/Public
   StartFile = index.html
   CustomHeaderClient = Access-Control-Allow-Origin: SAMEORIGIN; content-security-policy: script-src 'self'; x-xss-protection: 1; mode=block; x-frame-options: SAMEORIGIN; x-content-type: nosniff
+  CustomHeaderClient = content-security-policy: script-src 'self';
+  CustomHeaderClient = x-xss-protection: 1; mode=block
+  CustomHeaderClient = x-frame-options: SAMEORIGIN;
+  CustomHeaderClient = x-content-type: nosniff
 }
 
 VirtualHost {
