--- a/config/hiawatha.conf
+++ b/config/hiawatha.conf
@@ -34,11 +34,11 @@ VirtualHost {
   Hostname = www.surferhearts.com
   WebsiteRoot = /deploy/apps/surferhearts/Public
   StartFile = index.html
-  CustomHeaderClient = Access-Control-Allow-Origin: SAMEORIGIN; content-security-policy: script-src 'self'; x-xss-protection: 1; mode=block; x-frame-options: SAMEORIGIN; x-content-type: nosniff
-  CustomHeaderClient = content-security-policy: script-src 'self';
-  CustomHeaderClient = x-xss-protection: 1; mode=block
-  CustomHeaderClient = x-frame-options: SAMEORIGIN;
-  CustomHeaderClient = x-content-type: nosniff
+  CustomHeaderClient = Access-Control-Allow-Origin: SAMEORIGIN;
+  CustomHeaderClient = Content-Security-Policy: script-src 'self';
+  CustomHeaderClient = X-xss-protection: 1; mode=block
+  CustomHeaderClient = X-frame-options: SAMEORIGIN;
+  CustomHeaderClient = X-content-type: nosniff
 }
 
 VirtualHost {
