Added: redirect naked domains to www.domain...

--- a/config/hiawatha.conf
+++ b/config/hiawatha.conf
@@ -24,28 +24,29 @@ StartFile = index.html
 CustomHeaderClient = Access-Control-Allow-Origin: SAMEORIGIN;
 
 VirtualHost {
+  Hostname = megauni.com, surferhearts.com, miniuni.com
+  ReverseProxy /.* http://127.0.0.1:320/
+}
+
+VirtualHost {
   Hostname = www.miniuni.com
-  WebsiteRoot = /deploy/apps/miniuni/Public
-  StartFile = index.html
   ReverseProxy /.* http://127.0.0.1:330/
 }
 
 VirtualHost {
-  Hostname = www.surferhearts.com
-  WebsiteRoot = /deploy/apps/surferhearts/Public
-  StartFile = index.html
-  CustomHeaderClient = Access-Control-Allow-Origin: SAMEORIGIN;
-  CustomHeaderClient = Content-Security-Policy: script-src 'self';
-  CustomHeaderClient = X-xss-protection: 1; mode=block
-  CustomHeaderClient = X-frame-options: SAMEORIGIN;
-  CustomHeaderClient = X-content-type: nosniff
+  Hostname = www.megauni.com
+  ReverseProxy ^/.* http://127.0.0.1:3350/
 }
 
 VirtualHost {
-  Hostname = www.megauni.com
-  WebsiteRoot = /deploy/apps/megauni/Public
+  CustomHeaderClient = Content-Security-Policy: script-src 'self';
+  CustomHeaderClient = X-XSS-protection: 1; mode=block
+  CustomHeaderClient = X-frame-options: SAMEORIGIN;
+  CustomHeaderClient = X-content-type: nosniff
+
+  Hostname = www.surferhearts.com
+  WebsiteRoot = /deploy/apps/surferhearts/Public
   StartFile = index.html
-  ReverseProxy ^/.* http://127.0.0.1:3350/
 }
 
 
