--- a/config/hiawatha.conf
+++ b/config/hiawatha.conf
@@ -25,16 +25,22 @@ CustomHeaderClient = Access-Control-Allow-Origin: SAMEORIGIN;
 
 VirtualHost {
   Hostname = megauni.com, surferhearts.com, miniuni.com
+  WebsiteRoot = /deploy/apps/miniuni_http/Public
+  StartFile = index.html
   ReverseProxy /.* http://127.0.0.1:320/
 }
 
 VirtualHost {
   Hostname = www.miniuni.com
+  WebsiteRoot = /deploy/apps/miniuni/Public
+  StartFile = index.html
   ReverseProxy /.* http://127.0.0.1:330/
 }
 
 VirtualHost {
   Hostname = www.megauni.com
+  WebsiteRoot = /deploy/apps/megauni/Public
+  StartFile = index.html
   ReverseProxy ^/.* http://127.0.0.1:3350/
 }
 
