Updated: new megauni deploy config.

--- a/config/hiawatha.conf
+++ b/config/hiawatha.conf
@@ -38,10 +38,10 @@ VirtualHost {
 }
 
 VirtualHost {
-  Hostname = www.megauni.com
+  Hostname = www.megauni.com, www.surferhearts.com
   WebsiteRoot = /deploy/apps/megauni/Public
   StartFile = index.html
-  ReverseProxy ^/.* http://127.0.0.1:3350/
+  ReverseProxy ^/.* http://127.0.0.1:340/
 }
 
 VirtualHost {
@@ -50,7 +50,7 @@ VirtualHost {
   CustomHeaderClient = X-frame-options: SAMEORIGIN;
   CustomHeaderClient = X-content-type: nosniff
 
-  Hostname = www.surferhearts.com
+  Hostname = old.surferhearts.com
   WebsiteRoot = /deploy/apps/surferhearts/Public
   StartFile = index.html
 }
