--- a/config/hiawatha.conf
+++ b/config/hiawatha.conf
@@ -41,7 +41,8 @@ VirtualHost {
   Hostname = www.megauni.com, www.surferhearts.com
   WebsiteRoot = /deploy/apps/megauni/Public
   StartFile = index.html
-  ReverseProxy ^/.* http://127.0.0.1:340/
+  ReverseProxy ^/surferhearts.* http://127.0.0.1:350/
+  ReverseProxy ^/.*             http://127.0.0.1:340/
 }
 
 VirtualHost {
