--- a/config/hiawatha.conf
+++ b/config/hiawatha.conf
@@ -38,11 +38,17 @@ VirtualHost {
 }
 
 VirtualHost {
-  Hostname = www.megauni.com, www.surferhearts.com
+  Hostname = www.megauni.com
   WebsiteRoot = /deploy/apps/megauni/Public
   StartFile = index.html
-  ReverseProxy ^/surferhearts.* http://127.0.0.1:350/
   ReverseProxy ^/.*             http://127.0.0.1:340/
+}
+
+VirtualHost {
+  Hostname = www.surferhearts.com
+  WebsiteRoot = /deploy/apps/surferhearts/Public
+  StartFile = index.html
+  ReverseProxy ^/.*             http://127.0.0.1:350/
 }
 
 VirtualHost {
