--- a/config/hiawatha.conf
+++ b/config/hiawatha.conf
@@ -41,6 +41,7 @@ VirtualHost {
   Hostname = www.megauni.com
   WebsiteRoot = /deploy/apps/megauni/Public
   StartFile = index.html
+  ReverseProxy ^/surferhearts.* http://127.0.0.1:350/
   ReverseProxy ^/.*             http://127.0.0.1:340/
 }
 
